# ppt_se

./: README.md  config_loader.py  main.py  mcp-config.json  ppt_design_system_config.json  ppt_design_system_config_v2.json  ppt_generator.py  ppt_mcp_server.py  pyproject.toml  가이드문서.py  슬라이드.json
utils/: chart_tools.py  core.py  image_tools.py  property_tools.py  shape_tools.py  slide_tools.py  table_tools.py  text_tools.py
